# desec-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
desec/: __init__.py  models.py
examples/: get_domain.py  get_recordset.py
