[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desec"
version = "0.0.2"
authors = [
  { name="Freerk-Ole Zakfeld", email="freerk@zakfeld.com" }
]
description = "desec.io python client"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/fzakfeld/desec-python"
"Bug Tracker" = "https://github.com/fzakfeld/desec-python/issues"